# ottic-py

./: .gitignore  README.md  pyproject.toml  requirements  setup.cfg  test_import.py
src/: __init__.py  main.py
src/modules/: completions.py
src/ottic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
