[project]
name = "ottic"
version = "0.0.1"
authors = [
  { name="Dmitry Sergeev", email="dmitry@ottic.ai" },
]
description = "SDK for Ottic API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://ottic.ai"
Issues = "https://github.com/ottic-ai/ottic-py"